--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 				<div class="about-me__content-details about-me__content-details--justify-center ">
 					<div class="about-me__content-image-box">
-						<img src="img/settings.png" alt="About me image" class="about-me__content-img" />
+						<img src="img/laptop.png" alt="About me image" class="about-me__content-img" />
 					</div>
 					<h3 class="about-me__content-title">Learn to Code</h3>
 					<p class="about-me__content-para about-me__content-para--center">
