--- a/index.html
+++ b/index.html
@@ -185,6 +185,25 @@
 					<div class="card__side card__side--front">
 						<div class="card__details">
 							<div class="card__details--image-box">
+								<img src="img/learned.webp" alt="Learned" class="card__details--img" />
+							</div>
+							<div class="card__details--text">
+								<h3 class="card__title">Learned</h3>
+								<p class="card__text">This project(front-end part) is developed using HTML5, CSS3, SCSS</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="card__side card__side--back card__side--back-1">
+						<a href="https://multipurpose.nawassharif.com/" target="_blank" class="btn btn--yellow btn--animated"
+							>View Project</a
+						>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card__side card__side--front">
+						<div class="card__details">
+							<div class="card__details--image-box">
 								<img src="img/multipurpose.jpg" alt="Multipurpose" class="card__details--img" />
 							</div>
 							<div class="card__details--text">
