--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					</div>
 
 					<div class="card__side card__side--back card__side--back-1">
-						<a href="https://multipurpose.nawassharif.com/" target="_blank" class="btn btn--yellow btn--animated"
+						<a href="https://mdnawascse.github.io/learned/" target="_blank" class="btn btn--yellow btn--animated"
 							>View Project</a
 						>
 					</div>
@@ -214,31 +214,15 @@
 					</div>
 
 					<div class="card__side card__side--back card__side--back-1">
-						<a href="https://multipurpose.nawassharif.com/" target="_blank" class="btn btn--yellow btn--animated"
+						<a href="https://mdnawascse.github.io/Multipurpose/" target="_blank" class="btn btn--yellow btn--animated"
 							>View Project</a
 						>
 					</div>
 				</div>
 
-				 <div class="card">
-					<div class="card__side card__side--front">
-						<div class="card__details">
-							<div class="card__details--image-box">
-								<img src="img/nexter.jpg" alt="Nexter" class="card__details--img" />
-							</div>
-							<div class="card__details--text">
-								<h3 class="card__title">Nexter</h3>
-								<p class="card__text">This project(front-end part) is developed using HTML5, CSS3 (SASS)</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="card__side card__side--back card__side--back-1">
-						<a href="https://nexter.nawassharif.com/" target="_blank" class="btn btn--yellow btn--animated"
-							>View Project</a
-						>
-					</div>
-				</div><div class="card">
+				  
+				
+				<div class="card">
 					<div class="card__side card__side--front">
 						<div class="card__details">
 							<div class="card__details--image-box">
@@ -252,7 +236,7 @@
 					</div>
 
 					<div class="card__side card__side--back card__side--back-1">
-						<a href="https://tinyone.nawassharif.com/" target="_blank" class="btn btn--yellow btn--animated"
+						<a href="https://mdnawascse.github.io/tinyone/" target="_blank" class="btn btn--yellow btn--animated"
 							>View Project</a
 						>
 					</div>
